# lol-accept

./: .gitignore  Cargo.toml  LICENSE  README.md  accept.py  build.rs  main.py  requirements.txt  tray.py
.github/workflows/: build_and_release.yaml
docs/: macos-support-plan.md
src/: accept.rs  acceptor.rs  app.rs  cmd.rs  lcu.rs  main.rs  reg.rs  tray.rs
src/platform/: mod.rs
src/platform/windows/: lcu_auth.rs  mod.rs  startup.rs
