[package]
name = "lol-accept"
version = "3.2.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "blocking"] }
image = { version = "0.25.2", default-features = false, features = ["ico"] }
tray-icon = "0.24.0"
tao = "0.35.2"
regex = "1.10.6"

[target.'cfg(target_os = "windows")'.dependencies]
powershell_script = "1.1.0"
winreg = "0.52.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
